testsuite/negative/genspec3.n
class A {
  public this () { }
  public this (_ : int) { }
}

namespace System {
    public class Int32[T] {

    }
}


module Bug868 {
   foo () : void {
       _ = int.[int]() // E: expected int, got System.Int32\[
   }   
}


def t' = A.[int] (); // E: A..ctor doesn't take generic parameters

